# examples-python-poetry

./: .flake8  Makefile  README.md  mypy.ini  mypy_example.py  pyproject.toml  requirements.txt  setup.cfg
01.intro/: 09-conditionals-operators.py  10-for-loops.py  11-while-loops.py  12-for-loop-append-to-list.py
02.intermediate/: 04.custom-functions.py  05.fns-with-default-args.py  06.fns-with-arbitrary-args.py  07.lambda-fns.py  08.error-handling-try-except-raise.py
03.data-visualization/: 01.iterators-vs-iterable.py  02.enumerate-zip.py  03.iterators-pd-read_csv-chunk.py  04.list-comprehensions.py  06.generators.py  08.more-csv-zip-dict-toList-datarame.py  09.generators-large-csv-file-processing.py  10.process_large_csv_chunks.py  11.fn-version-of-10.py
04.data-types/: 02.tuple(immutable-array)-zip-list-enumerate.py  03.string-startswith-lower-templiteral.py  04.dictionary(object)-tupleUnpacking.py  05.dictionary(object)-get-update-del-pop.py  06.dictionary(object)-get-items-in-keys.py  08.booleans-comparisons.py  11.defaultdict.py  12.namedtuple(immutable-prop-access).py  13.dataclass.py
05.functions/: 01.0_docstrings.py  01.1_type-hints.py  01.3_refactor-destructuring.py  02.0_context_managers_intro.py  02.1_context_manger_custom.py  03.0_nexted_context_managers.py  03.1_nested_context_managers.py  04.functions.py  05.global-nonlocal.py  06.closures.py  07.decorators.py  08.decorator-timer-memoize-returnType-counter-timeout.py  09.decorator-docstrings.py  10.decorator-args-returnType-runNTimes.py
06.efficient-python-code/: 01.range-enumerate-map.py  (+11 more)
(+101 files in other folders)
