[tool.poetry]
name = "examples-python-poetry"
version = "0.1.0"
description = "Python examples with Poetry"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.5"
pandas = "^2.2.3"
python-dateutil = "^2.9.0.post0"
pytz = "^2025.1"
six = "^1.17.0"
tzdata = "^2025.1"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
autopep8 = "^2.0.4"
isort = "^5.13.2"
line-profiler = "^4.2.0"
memory-profiler = "^0.61.0"
black = "^25.1.0"
flake8-pyproject = "^1.2.3"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.flake8]
exclude = "venv, .venv, env, .env, .git, __pycache__, **/site-packages/**"
max-line-length = 200
ignore = "E203, W503, E501, E266, F811, F841, F401, E402"
per-file-ignores = "__init__.py:F401"
